--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       <div>
         <img src="Index/GTmetrix_Chargement_Avant.png" class="img_rapport" />
         <img src="Index/GTmetrix_Chargement_Après.png" class="img_rapport" />
+        <img src="Index/Index_YellowLabTools_Poids.png" class="img_rapport" />
       </div>
       <div class="ligne">Analyse Accessibilité - Index</div>
       <div>
