--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
       <h1>Rapport d'optimisation</h1>
     </header>
     <main>
-      <div class="ligne">W3C Validator</div>
-      <div>
+      <div class="ligne" >W3C Validator</div>
+      <div id="W3C">
         <img src="W3C_Validator_CSS.png" class="img_rapport" />
         <img src="Index/Index_W3C-Validator.png" class="img_rapport" />
       </div>
-      <div class="ligne">Analyse vitesse de chargement</div>
+      <div class="ligne">Analyse vitesse de chargement et poids</div>
       <div>
         <img src="Index/PageSpeed_Chargement_Avant.png" class="img_rapport" />
         <img src="Index/PageSpeed_Chargement_Après.png" class="img_rapport" />
@@ -62,7 +62,7 @@
           class="img_rapport"
         />
         <img
-          src="Contact/Page2_Acessibilité_Lighthouse_Après.png"
+          src="Contact/Page2_Accessibilité_Lighthouse_Après.png"
           class="img_rapport"
         />
         
