--- a/index.html
+++ b/index.html
@@ -16,9 +16,21 @@
   </head>
   <body>
     <header>
+      <div class="titre">
       <img src="la-chouette-agence.webp" class="logo" />
 
       <h1>Rapport d'optimisation</h1>
+      </div>
+
+      <ul class="nav-bar">
+        <li>
+          <a href="index.html">Accueil</a>
+        </li>
+
+        <li>
+          <a href="Rapport.html">Rapport d'optimisation</a>
+        </li>
+      </ul>
     </header>
     <main>
       <div class="ligne" >W3C Validator</div>
