--- a/Rapport.html
+++ b/Rapport.html
@@ -82,6 +82,10 @@
       <div>
         <img src="Changements/FormatImage.png" class="img_rapport" />
       </div>
+      <div class="ligne">Abondance de liens "spammy"</div>
+      <div>
+        <img src="Changements/Liens_Spammy.png" class="img_rapport" />
+      </div>
     </main>
   </body>
 </html>
