--- a/Rapport.html
+++ b/Rapport.html
@@ -109,6 +109,17 @@
       <div>
         <img src="Changements/Blocage_Rendu.png" class="img_rapport" />
       </div>
+      <div class="ligne">Hiérarchisation des balises Hn (heading)</div>
+      <div>
+        <img src="Changements/Heading2.png" class="img_rapport" />
+   
+      </div>
+
+      <div class="ligne">Utilisation de la balise Alt</div>
+      <div>
+        <img src="Changements/Alt.png" class="img_rapport" />
+   
+      </div>
    
     </main>
   </body>
