--- a/Rapport.html
+++ b/Rapport.html
@@ -115,7 +115,7 @@
    
       </div>
 
-      <div class="ligne">Utilisation de la balise Alt</div>
+      <div class="ligne">Utilisation de l'attribut Alt</div>
       <div>
         <img src="Changements/Alt.png" class="img_rapport" />
    
